# factorio-vmc

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/factorio_vmc/: Cargo.toml
crates/factorio_vmc_nodes/: Cargo.toml
crates/factorio_vmc_nodes/src/: nodes.rs
crates/factorio_workshop/: Cargo.toml
crates/factorio_workshop/src/: lib.rs  mod_info.rs  prelude.rs  project.rs
crates/factorio_workshop_nodes/: Cargo.toml
src/: App.tsx  main.tsx  state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fullscreen.rs  mod.rs
src-tauri/src/commands/state/: mod.rs  project.rs  tool.rs
src-tauri/src/state/: mod.rs
src/components/: page.tsx  project-view.tsx
src/components/bars/: bottom-toolbar.tsx  right-toolbar.tsx  top-toolbar.tsx
src/pages/: projects.tsx
