[workspace]
resolver = "3"
members = ["crates/factorio_workshop", "crates/factorio_workshop_nodes", "src-tauri"]

[workspace.dependencies]
factorio_workshop = { path = "crates/factorio_workshop" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
